# exfatprogs

./: .gitignore  Android.bp  Makefile.am  NEWS  README.md  configure.ac
.github/workflows/: c-cpp.yml  container-buildtests.yml
defrag/: defrag.c  defrag.h
dosattr/: Makefile.am  chdosattr.c  dosattr.h  lsdosattr.c
dump/: dump.c
exfat2img/: exfat2img.c
fsck/: fsck.c  fsck.h  repair.c  repair.h
include/: exfat_dir.h  exfat_fs.h  exfat_ondisk.h  libexfat.h  upcase_table.h  utils.h  version.h
label/: label.c
lib/: Android.bp  exfat_dir.c  exfat_fs.c  libexfat.c  utils.c
manpages/: Makefile.am  chdosattr.1  fsck.exfat.8  lsdosattr.1  mkfs.exfat.8
mkfs/: Android.bp  Makefile.am  crc.c  mkfs.c  mkfs.h  upcase.c
tune/: tune.c
upcase/: Makefile.am  exfat-uctbl2bin.sh  upcase-mandatory.txt  upcase-null.txt  upcase-recommended.txt
